src/test/deca/syntax/invalid/test32_readFloat.deca
// Description:
//    Programme testant readFloat.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 17 : missing ')' at ';'
//
// Historique:
//    cree le 14/01/2020

{
	float x;
	x=readFloat(;
}